--- a/package.json
+++ b/package.json
@@ -7,18 +7,36 @@
 		"android": "expo start --android",
 		"ios": "expo start --ios",
 		"web": "expo start --web",
-		"update-deps": "pnpm update -Li && pnpm expo install --fix && pnpm dlx expo-doctor"
+		"update-deps": "yarn upgrade-interactive && yarn expo install --fix && yarn dlx expo-doctor"
 	},
 	"dependencies": {
+		"dotenv": "^16.1.3",
+		"dotenv-expand": "^10.0.0",
 		"expo": "~48.0.19",
 		"expo-status-bar": "~1.4.4",
 		"react": "18.2.0",
-		"react-native": "0.71.8"
+		"react-native": "0.71.8",
+		"zod": "^3.21.4"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.22.1",
+		"@expo/config": "^8.0.2",
+		"@svgr/core": "^8.0.0",
+		"@svgr/plugin-jsx": "^8.0.1",
+		"@svgr/plugin-svgo": "^8.0.1",
+		"@types/babel__core": "^7.20.1",
+		"@types/eslint": "^8.40.0",
 		"@types/react": "~18.0.38",
+		"@types/react-native": "^0.72.2",
+		"@typescript-eslint/eslint-plugin": "^5.59.8",
+		"@typescript-eslint/parser": "^5.59.8",
+		"babel-plugin-module-resolver": "^5.0.0",
+		"cross-env": "^7.0.3",
 		"eas-cli": "^3.13.2",
+		"eslint": "^8.42.0",
+		"eslint-config-universe": "^11.2.0",
+		"eslint-plugin-react": "^7.32.2",
+		"eslint-plugin-unused-imports": "^2.0.0",
 		"typescript": "^4.9.5"
 	},
 	"private": true
