--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"android": "expo start --android",
 		"ios": "expo start --ios",
 		"web": "expo start --web",
-		"update-deps": "yarn upgrade-interactive && yarn expo install --fix && yarn dlx expo-doctor"
+		"update-deps": "npm-check -u && expo install --fix && npx expo-doctor --fix-dependencies"
 	},
 	"dependencies": {
 		"dotenv": "^16.1.3",
@@ -26,7 +26,7 @@
 		"@svgr/plugin-svgo": "^8.0.1",
 		"@types/babel__core": "^7.20.1",
 		"@types/eslint": "^8.40.0",
-		"@types/react": "~18.0.38",
+		"@types/react": "~18.0.27",
 		"@types/react-native": "^0.72.2",
 		"@typescript-eslint/eslint-plugin": "^5.59.8",
 		"@typescript-eslint/parser": "^5.59.8",
@@ -37,7 +37,7 @@
 		"eslint-config-universe": "^11.2.0",
 		"eslint-plugin-react": "^7.32.2",
 		"eslint-plugin-unused-imports": "^2.0.0",
-		"typescript": "^4.9.5"
+		"typescript": "^4.9.4"
 	},
 	"private": true
 }
