--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,11 @@ web-build/
 
 # Temporary files created by Metro to check the health of the file watcher
 .metro-health-check*
+
+# Environment
+.env*
+!.env.project
+!.env.vault
+!.env.example
+.flaskenv*
+android-key.json
