--- a/package.json
+++ b/package.json
@@ -11,20 +11,26 @@
 	},
 	"dependencies": {
 		"@sentry/react-native": "4.13.0",
+		"add": "^2.0.6",
 		"dotenv": "^16.1.3",
 		"dotenv-expand": "^10.0.0",
 		"expo": "~48.0.19",
+		"expo-application": "^5.1.1",
 		"expo-constants": "^14.2.1",
+		"expo-device": "^5.2.1",
 		"expo-linear-gradient": "^12.1.2",
 		"expo-network": "^5.2.1",
 		"expo-secure-store": "^12.1.1",
 		"expo-status-bar": "~1.4.4",
+		"expo-system-ui": "^2.2.1",
 		"expo-updates": "^0.16.4",
 		"react": "18.2.0",
 		"react-native": "0.71.8",
+		"react-native-paper": "^5.8.0",
 		"react-native-reanimated": "~2.14.4",
-		"react-native-safe-area-context": "4.5.0",
+		"react-native-safe-area-context": "^4.5.0",
 		"react-native-svg": "13.4.0",
+		"react-native-vector-icons": "^9.2.0",
 		"sentry-expo": "^6.1.1",
 		"zod": "^3.21.4"
 	},
