--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,8 +26,10 @@
 		"strictPropertyInitialization": true,
 		"baseUrl": ".",
 		"paths": {
-			"assets": ["assets/*"],
 			"config": ["src/config/"],
+			"env": ["src/env"],
+			"errors": ["src/errors"],
+			"assets": ["assets/*"],
 			"mocks": ["src/mocks/"],
 			"components/*": ["src/components/*"],
 			"contexts/*": ["src/contexts/*"],
@@ -40,8 +42,7 @@
 			"styles/*": ["src/styles/*"],
 			"types/*": ["src/types/*"],
 			"schemas/*": ["src/schemas/*"],
-			"endpoints/*": ["src/endpoints/*"],
-			"env": ["src/env"]
+			"endpoints/*": ["src/endpoints/*"]
 		}
 	},
 	"exclude": ["node_modules/**/*", "cache/**/*"]
