--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
 	"version": "1.0.0",
 	"main": "node_modules/expo/AppEntry.js",
 	"scripts": {
-		"start": "expo start",
-		"android": "expo start --android",
-		"ios": "expo start --ios",
-		"web": "expo start --web",
+		"start": "cross-env ENV=development expo start",
+		"android": "cross-env ENV=development expo start --android",
+		"ios": "cross-env ENV=development expo start --ios",
+		"web": "cross-env ENV=development expo start --web",
 		"update-deps": "npm-check -u && expo install --fix && npx expo-doctor"
 	},
 	"dependencies": {
@@ -46,7 +46,7 @@
 		"@types/react-native": "^0.72.2",
 		"@typescript-eslint/eslint-plugin": "^5.59.8",
 		"@typescript-eslint/parser": "^5.59.8",
-		"babel-plugin-module-resolver": "^5.0.0",
+		"babel-plugin-tsconfig-paths-module-resolver": "^1.0.4",
 		"cross-env": "^7.0.3",
 		"eas-cli": "^3.13.2",
 		"eslint": "^8.42.0",
