--- a/package.json
+++ b/package.json
@@ -7,7 +7,16 @@
 		"android": "cross-env ENV=development expo start --android",
 		"ios": "cross-env ENV=development expo start --ios",
 		"web": "cross-env ENV=development expo start --web",
-		"update-deps": "npm-check -u && expo install --fix && npx expo-doctor"
+		"update-deps": "npm-check -u && expo install --fix && npx expo-doctor",
+		"env:new": "dotenv-vault new",
+		"env:push": "npm run env:push:development && npm run env:push:production",
+		"env:push:development": "dotenv-vault push development .env.development",
+		"env:push:production": "dotenv-vault push production .env.production",
+		"env:pull": "npm run env:pull:example && npm run env:pull:development && npm run env:pull:production",
+		"env:pull:example": "dotenv-vault pull example .env.example",
+		"env:pull:development": "dotenv-vault pull development .env.development",
+		"env:pull:production": "dotenv-vault pull production .env.production",
+		"env:open": "dotenv-vault open"
 	},
 	"dependencies": {
 		"@sentry/react-native": "4.13.0",
@@ -47,6 +56,7 @@
 		"@typescript-eslint/parser": "^5.59.8",
 		"babel-plugin-tsconfig-paths-module-resolver": "^1.0.4",
 		"cross-env": "^7.0.3",
+		"dotenv-vault": "^1.23.3",
 		"eas-cli": "^3.13.2",
 		"eslint": "^8.42.0",
 		"eslint-config-universe": "^11.2.0",
