--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
 		"ios": "cross-env ENV=development expo start --ios",
 		"web": "cross-env ENV=development expo start --web",
 		"update-deps": "npm-check -u && expo install --fix && npx expo-doctor",
+		"lint": "eslint . --fix",
+		"format": "prettier --write .",
+		"tsc": "tsc",
 		"env:new": "dotenv-vault new",
 		"env:push": "npm run env:push:development && npm run env:push:production",
 		"env:push:development": "dotenv-vault push development .env.development",
@@ -50,6 +53,7 @@
 		"@svgr/plugin-svgo": "^8.0.1",
 		"@types/babel__core": "^7.20.1",
 		"@types/eslint": "^8.40.0",
+		"@types/prettier": "^2.7.3",
 		"@types/react": "~18.0.27",
 		"@types/react-native": "^0.72.2",
 		"@typescript-eslint/eslint-plugin": "^5.59.8",
@@ -62,6 +66,7 @@
 		"eslint-config-universe": "^11.2.0",
 		"eslint-plugin-react": "^7.32.2",
 		"eslint-plugin-unused-imports": "^2.0.0",
+		"prettier": "^2.8.8",
 		"typescript": "^4.9.4"
 	},
 	"private": true
