--- a/package.json
+++ b/package.json
@@ -63,9 +63,15 @@
 		"dotenv-vault": "^1.23.3",
 		"eas-cli": "^3.13.2",
 		"eslint": "^8.42.0",
-		"eslint-config-universe": "^11.2.0",
+		"eslint-config-prettier": "^8.8.0",
+		"eslint-config-react-app": "^7.0.1",
+		"eslint-import-resolver-typescript": "^3.5.5",
+		"eslint-plugin-import": "^2.27.5",
+		"eslint-plugin-jsx-expressions": "^1.3.1",
 		"eslint-plugin-react": "^7.32.2",
+		"eslint-plugin-testing-library": "^5.11.0",
 		"eslint-plugin-unused-imports": "^2.0.0",
+		"eslint-plugin-vitest": "^0.2.5",
 		"prettier": "^2.8.8",
 		"typescript": "^4.9.4"
 	},
