--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,30 +1,30 @@
 {
 	"extends": "expo/tsconfig.base",
 	"compilerOptions": {
-		"allowJs": true,
-		"skipLibCheck": true,
-		"esModuleInterop": true,
-		"allowSyntheticDefaultImports": true,
+		// type checking
 		"strict": true,
-		"forceConsistentCasingInFileNames": true,
+		"allowUnreachableCode": false,
+		"allowUnusedLabels": false,
 		"noFallthroughCasesInSwitch": true,
+		"noImplicitAny": true,
+		"noImplicitOverride": true,
+		"noImplicitReturns": true,
+		"noImplicitThis": true,
+		"noUncheckedIndexedAccess": true,
+		"strictFunctionTypes": true,
+		"strictBindCallApply": true,
+		"strictNullChecks": true,
+		"strictPropertyInitialization": true,
+		"useUnknownInCatchVariables": true,
+		"noUnusedLocals": false,
+		"noUnusedParameters": false,
+
+		// modules
+		"baseUrl": ".",
 		"module": "esnext",
 		"moduleResolution": "node",
 		"resolveJsonModule": true,
-		"isolatedModules": true,
-		"noEmit": true,
-		"jsx": "react-native",
-		"checkJs": true,
-		"downlevelIteration": true,
-		"noImplicitAny": true,
-		"noImplicitThis": true,
-		"noImplicitReturns": true,
-		"noImplicitOverride": true,
-		"noUncheckedIndexedAccess": true,
-		"strictNullChecks": true,
-		"strictFunctionTypes": true,
-		"strictPropertyInitialization": true,
-		"baseUrl": ".",
+		"types": ["vitest/globals"],
 		"paths": {
 			"config/*": ["src/config/*"],
 			"constants": ["src/constants/"],
@@ -42,7 +42,33 @@
 			"types/*": ["src/types/*"],
 			"schemas/*": ["src/schemas/*"],
 			"endpoints/*": ["src/endpoints/*"]
-		}
+		},
+
+		// emit
+		"downlevelIteration": true,
+		"noEmit": true,
+
+		// javascript support
+		"allowJs": true,
+		"checkJs": true,
+
+		// interop constraints
+		"allowSyntheticDefaultImports": true,
+		"esModuleInterop": true,
+		"forceConsistentCasingInFileNames": true,
+		"isolatedModules": true,
+		"verbatimModuleSyntax": true,
+
+		// language and environment
+		"jsx": "react-native",
+		"lib": ["dom", "dom.iterable", "esnext"],
+		"target": "esnext",
+
+		// output formatting
+		"noErrorTruncation": true,
+
+		// completeness
+		"skipLibCheck": true
 	},
-	"exclude": ["node_modules/**/*", "cache/**/*"]
+	"exclude": ["node_modules", "public", "cache"]
 }
