--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"lint": "eslint . --fix",
 		"format": "prettier --write .",
 		"tsc": "tsc",
+		"generate-icons": "tsx ./scripts/generate-icons.ts",
 		"env:new": "dotenv-vault new",
 		"env:push": "npm run env:push:development && npm run env:push:production",
 		"env:push:development": "dotenv-vault push development .env.development",
@@ -73,6 +74,7 @@
 		"eslint-plugin-unused-imports": "^2.0.0",
 		"eslint-plugin-vitest": "^0.2.5",
 		"prettier": "^2.8.8",
+		"tsx": "^3.12.7",
 		"typescript": "^4.9.4"
 	},
 	"private": true
