--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
 		"ios": "cross-env ENV=development expo start --ios",
 		"web": "cross-env ENV=development expo start --web",
 		"update-deps": "npm-check -u && expo install --fix && npx expo-doctor",
+		"test": "jest --watch --coverage=false --changedSince=origin/main",
+		"test:all": "jest",
 		"lint": "eslint . --fix",
 		"format": "prettier --write .",
 		"tsc": "tsc",
@@ -24,7 +26,6 @@
 	},
 	"dependencies": {
 		"@sentry/react-native": "4.13.0",
-		"add": "^2.0.6",
 		"dotenv": "^16.1.3",
 		"dotenv-expand": "^10.0.0",
 		"expo": "~48.0.19",
@@ -52,8 +53,11 @@
 		"@svgr/core": "^8.0.0",
 		"@svgr/plugin-jsx": "^8.0.1",
 		"@svgr/plugin-svgo": "^8.0.1",
+		"@testing-library/jest-native": "^5.4.2",
+		"@testing-library/react-native": "^12.1.2",
 		"@types/babel__core": "^7.20.1",
 		"@types/eslint": "^8.40.0",
+		"@types/jest": "^29.5.2",
 		"@types/prettier": "^2.7.3",
 		"@types/react": "~18.0.27",
 		"@types/react-native": "^0.72.2",
@@ -73,7 +77,10 @@
 		"eslint-plugin-testing-library": "^5.11.0",
 		"eslint-plugin-unused-imports": "^2.0.0",
 		"eslint-plugin-vitest": "^0.2.5",
+		"jest": "^29.5.0",
+		"jest-expo": "^48.0.2",
 		"prettier": "^2.8.8",
+		"ts-jest": "^29.1.0",
 		"tsx": "^3.12.7",
 		"typescript": "^4.9.4"
 	},
