--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"android": "cross-env ENV=development expo start --android",
 		"ios": "cross-env ENV=development expo start --ios",
 		"web": "cross-env ENV=development expo start --web",
+		"expo": "expo",
 		"update-deps": "npm-check -u && expo install --fix && npx expo-doctor",
 		"test": "jest --watch --coverage=false --changedSince=origin/main",
 		"test:all": "jest",
