--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
 		"test": "jest --watch --coverage=false --changedSince=origin/main",
 		"test:all": "jest",
 		"lint": "eslint . --fix",
+		"eslint": "eslint",
 		"format": "prettier --write .",
+		"prettier": "prettier",
 		"tsc": "tsc",
 		"generate-icons": "tsx ./scripts/generate-icons.ts",
 		"env:new": "dotenv-vault new",
