--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
 		"react": "18.2.0",
 		"react-native": "0.71.8",
 		"react-native-paper": "^5.8.0",
+		"react-native-paper-dates": "^0.18.1",
 		"react-native-reanimated": "~2.14.4",
 		"react-native-safe-area-context": "^4.5.0",
 		"react-native-svg": "13.4.0",
