--- a/tsconfig.json
+++ b/tsconfig.json
@@ -39,6 +39,7 @@
 			"screens/*": ["src/screens/*"],
 			"styles/*": ["src/styles/*"],
 			"types/*": ["src/types/*"],
+			"schemas": ["src/schemas/"],
 			"schemas/*": ["src/schemas/*"]
 		},
 
