--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
 		"env:open": "dotenv-vault open"
 	},
 	"dependencies": {
-		"@sentry/react-native": "4.13.0",
+		"@sentry/react-native": "4.15.2",
 		"dotenv": "^16.1.3",
 		"dotenv-expand": "^10.0.0",
 		"expo": "~48.0.19",
@@ -52,7 +52,7 @@
 		"react-native-safe-area-context": "4.5.0",
 		"react-native-screens": "~3.20.0",
 		"react-native-svg": "13.4.0",
-		"sentry-expo": "^6.1.1",
+		"sentry-expo": "~6.2.0",
 		"zod": "^3.21.4"
 	},
 	"devDependencies": {
