--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 		"update-deps": "npm-check -u && expo install --fix && npx expo-doctor",
 		"test": "jest --watch --coverage=false --changedSince=origin/main",
 		"test:all": "jest",
-		"lint": "eslint . --fix",
+		"lint": "eslint . --fix --report-unused-disable-directives",
 		"eslint": "eslint",
 		"format": "prettier --write .",
 		"prettier": "prettier",
