--- a/package.json
+++ b/package.json
@@ -7,15 +7,11 @@
 		"android": "cross-env ENV=development expo start --android",
 		"ios": "cross-env ENV=development expo start --ios",
 		"web": "cross-env ENV=development expo start --web",
-		"expo": "expo",
 		"update-deps": "npm-check -u && expo install --fix && npx expo-doctor",
 		"test": "jest --watch --coverage=false --changedSince=origin/main",
 		"test:all": "jest",
 		"lint": "eslint . --fix --report-unused-disable-directives",
-		"eslint": "eslint",
 		"format": "prettier --write .",
-		"prettier": "prettier",
-		"tsc": "tsc",
 		"generate-icons": "tsx ./scripts/generate-icons.ts",
 		"env:new": "dotenv-vault new",
 		"env:push": "npm run env:push:development && npm run env:push:production",
@@ -25,11 +21,15 @@
 		"env:pull:example": "dotenv-vault pull example .env.example",
 		"env:pull:development": "dotenv-vault pull development .env.development",
 		"env:pull:production": "dotenv-vault pull production .env.production",
-		"env:open": "dotenv-vault open"
+		"env:open": "dotenv-vault open",
+		"expo": "expo",
+		"eslint": "eslint",
+		"prettier": "prettier",
+		"tsc": "tsc"
 	},
 	"dependencies": {
 		"@sentry/react-native": "4.15.2",
-		"dotenv": "^16.1.3",
+		"dotenv": "^16.2.0",
 		"dotenv-expand": "^10.0.0",
 		"expo": "~48.0.19",
 		"expo-application": "~5.1.1",
@@ -56,7 +56,7 @@
 		"zod": "^3.21.4"
 	},
 	"devDependencies": {
-		"@babel/core": "^7.22.1",
+		"@babel/core": "^7.22.5",
 		"@expo/config": "^8.0.2",
 		"@svgr/core": "^8.0.0",
 		"@svgr/plugin-jsx": "^8.0.1",
@@ -65,17 +65,17 @@
 		"@testing-library/react-native": "^12.1.2",
 		"@total-typescript/ts-reset": "^0.4.2",
 		"@types/babel__core": "^7.20.1",
-		"@types/eslint": "^8.40.0",
+		"@types/eslint": "^8.40.2",
 		"@types/jest": "^29.5.2",
 		"@types/prettier": "^2.7.3",
 		"@types/react": "~18.0.27",
 		"@types/react-native": "^0.72.2",
-		"@typescript-eslint/eslint-plugin": "^5.59.8",
-		"@typescript-eslint/parser": "^5.59.8",
+		"@typescript-eslint/eslint-plugin": "^5.59.11",
+		"@typescript-eslint/parser": "^5.59.11",
 		"babel-plugin-tsconfig-paths-module-resolver": "^1.0.4",
 		"cross-env": "^7.0.3",
 		"dotenv-vault": "^1.23.3",
-		"eas-cli": "^3.13.2",
+		"eas-cli": "^3.13.3",
 		"eslint": "^8.42.0",
 		"eslint-config-prettier": "^8.8.0",
 		"eslint-config-react-app": "^7.0.1",
@@ -85,7 +85,7 @@
 		"eslint-plugin-react": "^7.32.2",
 		"eslint-plugin-testing-library": "^5.11.0",
 		"eslint-plugin-unused-imports": "^2.0.0",
-		"eslint-plugin-vitest": "^0.2.5",
+		"eslint-plugin-vitest": "^0.2.6",
 		"jest": "^29.5.0",
 		"jest-expo": "^48.0.2",
 		"prettier": "^2.8.8",
