Update `tsconfig.json` paths

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,11 +25,12 @@
 		"moduleResolution": "node",
 		"resolveJsonModule": true,
 		"paths": {
-			"config": ["src/config/"],
-			"errors": ["src/errors/"],
-			"mocks": ["src/mocks/"],
-			"endpoints": ["src/endpoints/"],
+			"config": ["src/config"],
+			"errors": ["src/errors"],
+			"mocks": ["src/mocks"],
+			"endpoints": ["src/endpoints"],
 			"i18n": ["src/i18n"],
+			"theme": ["src/theme"],
 			"components/*": ["src/components/*"],
 			"contexts/*": ["src/contexts/*"],
 			"errors/*": ["src/errors/*"],
@@ -38,7 +39,6 @@
 			"assets/*": ["src/assets/*"],
 			"navigation/*": ["src/navigation/*"],
 			"screens/*": ["src/screens/*"],
-			"styles/*": ["src/styles/*"],
 			"types/*": ["src/types/*"],
 			"schemas/*": ["src/schemas/*"]
 		},
