--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
 		"react-native-screens": "~3.20.0",
 		"react-native-svg": "13.4.0",
 		"sentry-expo": "~6.2.0",
-		"zod": "^3.21.4"
+		"zod": "^3.21.4",
+		"expo-av": "~13.2.1"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.22.5",
