--- a/package.json
+++ b/package.json
@@ -1,102 +1,94 @@
 {
-	"name": "react-native-starter",
-	"version": "1.0.0",
-	"main": "index.ts",
-	"scripts": {
-		"start": "cross-env ENV=development expo start",
-		"android": "cross-env ENV=development expo start --android",
-		"ios": "cross-env ENV=development expo start --ios",
-		"web": "cross-env ENV=development expo start --web",
-		"update-deps": "npm-check -u && expo install --fix && npx expo-doctor && prettier --write ./package.json",
-		"test": "jest --watch --coverage=false --changedSince=origin/main",
-		"test:all": "jest",
-		"lint": "eslint . --fix --report-unused-disable-directives",
-		"format": "prettier --write .",
-		"generate-icons": "tsx ./scripts/generate-icons.ts",
-		"env:new": "dotenv-vault new",
-		"env:push": "npm run env:push:development && npm run env:push:production",
-		"env:push:development": "dotenv-vault push development .env.development",
-		"env:push:production": "dotenv-vault push production .env.production",
-		"env:pull": "npm run env:pull:example && npm run env:pull:development && npm run env:pull:production",
-		"env:pull:example": "dotenv-vault pull example .env.example",
-		"env:pull:development": "dotenv-vault pull development .env.development",
-		"env:pull:production": "dotenv-vault pull production .env.production",
-		"env:open": "dotenv-vault open",
-		"expo": "expo",
-		"eslint": "eslint",
-		"prettier": "prettier",
-		"tsc": "tsc"
-	},
-	"dependencies": {
-		"@sentry/react-native": "4.15.2",
-		"dotenv": "^16.2.0",
-		"dotenv-expand": "^10.0.0",
-		"expo": "~48.0.19",
-		"expo-application": "~5.1.1",
-		"expo-constants": "~14.2.1",
-		"expo-device": "~5.2.1",
-		"expo-linear-gradient": "~12.1.2",
-		"expo-linking": "~4.0.1",
-		"expo-network": "~5.2.1",
-		"expo-router": "^1.5.3",
-		"expo-secure-store": "~12.1.1",
-		"expo-status-bar": "~1.4.4",
-		"expo-system-ui": "~2.2.1",
-		"expo-updates": "~0.16.4",
-		"react": "18.2.0",
-		"react-native": "0.71.8",
-		"react-native-gesture-handler": "~2.9.0",
-		"react-native-paper": "^5.8.0",
-		"react-native-paper-dates": "^0.18.1",
-		"react-native-reanimated": "~2.14.4",
-		"react-native-safe-area-context": "4.5.0",
-		"react-native-screens": "~3.20.0",
-		"react-native-svg": "13.4.0",
-		"sentry-expo": "~6.2.0",
-		"zod": "^3.21.4",
-		"expo-av": "~13.2.1"
-	},
-	"devDependencies": {
-		"@babel/core": "^7.22.5",
-		"@expo/config": "^8.0.2",
-		"@svgr/core": "^8.0.0",
-		"@svgr/plugin-jsx": "^8.0.1",
-		"@svgr/plugin-svgo": "^8.0.1",
-		"@testing-library/jest-native": "^5.4.2",
-		"@testing-library/react-native": "^12.1.2",
-		"@total-typescript/ts-reset": "^0.4.2",
-		"@types/babel__core": "^7.20.1",
-		"@types/eslint": "^8.40.2",
-		"@types/jest": "^29.5.2",
-		"@types/prettier": "^2.7.3",
-		"@types/react": "~18.0.27",
-		"@types/react-native": "^0.72.2",
-		"@typescript-eslint/eslint-plugin": "^5.59.11",
-		"@typescript-eslint/parser": "^5.59.11",
-		"babel-plugin-tsconfig-paths-module-resolver": "^1.0.4",
-		"cross-env": "^7.0.3",
-		"dotenv-vault": "^1.23.3",
-		"eas-cli": "^3.13.3",
-		"eslint": "^8.42.0",
-		"eslint-config-prettier": "^8.8.0",
-		"eslint-config-react-app": "^7.0.1",
-		"eslint-import-resolver-typescript": "^3.5.5",
-		"eslint-plugin-import": "^2.27.5",
-		"eslint-plugin-jsx-expressions": "^1.3.1",
-		"eslint-plugin-react": "^7.32.2",
-		"eslint-plugin-testing-library": "^5.11.0",
-		"eslint-plugin-unused-imports": "^2.0.0",
-		"eslint-plugin-vitest": "^0.2.6",
-		"jest": "^29.5.0",
-		"jest-expo": "^48.0.2",
-		"prettier": "^2.8.8",
-		"ts-jest": "^29.1.0",
-		"tsx": "^3.12.7",
-		"typescript": "^4.9.4"
-	},
-	"overrides": {
-		"metro": "0.76.0",
-		"metro-resolver": "0.76.0"
-	},
-	"private": true
+  "name": "react-native-starter",
+  "version": "1.0.0",
+  "main": "expo-router/entry",
+  "scripts": {
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web",
+    "update-deps": "npm-check -u && expo install --fix && npx expo-doctor && prettier --write ./package.json",
+    "test": "jest --watch --coverage=false --changedSince=origin/main",
+    "test:all": "jest",
+    "lint": "eslint . --fix --report-unused-disable-directives",
+    "format": "prettier --write .",
+    "generate-icons": "tsx ./scripts/generate-icons.ts",
+    "env:new": "dotenv-vault new",
+    "env:push": "npm run env:push:development && npm run env:push:production",
+    "env:push:development": "dotenv-vault push development .env.development",
+    "env:push:production": "dotenv-vault push production .env.production",
+    "env:pull": "npm run env:pull:example && npm run env:pull:development && npm run env:pull:production",
+    "env:pull:example": "dotenv-vault pull example .env.example",
+    "env:pull:development": "dotenv-vault pull development .env.development",
+    "env:pull:production": "dotenv-vault pull production .env.production",
+    "env:open": "dotenv-vault open"
+  },
+  "dependencies": {
+    "@sentry/react-native": "5.5.0",
+    "dotenv": "^16.3.1",
+    "dotenv-expand": "^10.0.0",
+    "expo": "^49.0.0",
+    "expo-application": "^5.3.0",
+    "expo-av": "^13.4.1",
+    "expo-constants": "^14.4.2",
+    "expo-device": "^5.4.0",
+    "expo-linear-gradient": "^12.3.0",
+    "expo-linking": "^5.0.2",
+    "expo-network": "^5.4.0",
+    "expo-router": "^2.0.0",
+    "expo-secure-store": "^12.3.1",
+    "expo-status-bar": "^1.6.0",
+    "expo-system-ui": "^2.4.0",
+    "expo-updates": "^0.18.8",
+    "react": "18.2.0",
+    "react-native": "^0.72.1",
+    "react-native-gesture-handler": "^2.12.0",
+    "react-native-paper": "^5.9.1",
+    "react-native-paper-dates": "^0.18.12",
+    "react-native-reanimated": "^3.3.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "^3.22.0",
+    "react-native-svg": "^13.9.0",
+    "sentry-expo": "^7.0.0",
+    "zod": "^3.21.4"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.22.7",
+    "@expo/config": "^8.1.2",
+    "@svgr/core": "^8.0.0",
+    "@svgr/plugin-jsx": "^8.0.1",
+    "@svgr/plugin-svgo": "^8.0.1",
+    "@testing-library/jest-native": "^5.4.2",
+    "@testing-library/react-native": "^12.1.2",
+    "@total-typescript/ts-reset": "^0.4.2",
+    "@types/babel__core": "^7.20.1",
+    "@types/eslint": "^8.40.2",
+    "@types/jest": "^29.5.2",
+    "@types/prettier": "^2.7.3",
+    "@types/react": "~18.0.27",
+    "@types/react-native": "^0.72.2",
+    "@typescript-eslint/eslint-plugin": "^5.61.0",
+    "@typescript-eslint/parser": "^5.61.0",
+    "babel-plugin-tsconfig-paths-module-resolver": "^1.0.4",
+    "cross-env": "^7.0.3",
+    "dotenv-vault": "^1.24.0",
+    "eas-cli": "^3.15.0",
+    "eslint": "^8.44.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-config-react-app": "^7.0.1",
+    "eslint-import-resolver-typescript": "^3.5.5",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jsx-expressions": "^1.3.1",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-testing-library": "^5.11.0",
+    "eslint-plugin-unused-imports": "^2.0.0",
+    "eslint-plugin-vitest": "^0.2.6",
+    "jest": "^29.6.0",
+    "jest-expo": "^49.0.0",
+    "prettier": "^3.0.0",
+    "ts-jest": "^29.1.1",
+    "tsx": "^3.12.7",
+    "typescript": "^5.1.6"
+  },
+  "private": true
 }
