--- a/package.json
+++ b/package.json
@@ -25,13 +25,12 @@
 	},
 	"dependencies": {
 		"@sentry/react-native": "5.5.0",
-		"dotenv": "^16.3.1",
-		"dotenv-expand": "^10.0.0",
 		"expo": "^49.0.0",
 		"expo-application": "^5.3.0",
 		"expo-av": "^13.4.1",
 		"expo-constants": "^14.4.2",
 		"expo-device": "^5.4.0",
+		"expo-font": "~11.4.0",
 		"expo-linear-gradient": "^12.3.0",
 		"expo-linking": "^5.0.2",
 		"expo-network": "^5.4.0",
@@ -50,8 +49,7 @@
 		"react-native-screens": "^3.22.0",
 		"react-native-svg": "^13.9.0",
 		"sentry-expo": "^7.0.0",
-		"zod": "^3.21.4",
-		"expo-font": "~11.4.0"
+		"zod": "^3.21.4"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.22.7",
@@ -70,7 +68,6 @@
 		"@types/react-native": "^0.72.2",
 		"@typescript-eslint/eslint-plugin": "^5.61.0",
 		"@typescript-eslint/parser": "^5.61.0",
-		"cross-env": "^7.0.3",
 		"dotenv-vault": "^1.24.0",
 		"eas-cli": "^3.15.0",
 		"eslint": "^8.44.0",
