--- a/package.json
+++ b/package.json
@@ -7,17 +7,17 @@
 		"android": "expo start --android",
 		"ios": "expo start --ios",
 		"web": "expo start --web",
-		"update-deps": "npm-check -u && expo install --fix && npx expo-doctor",
+		"update-deps": "yarn upgrade-interactive && expo install --fix && yarn dlx expo-doctor",
 		"test": "jest --watch --coverage=false --changedSince=origin/main",
 		"test:all": "jest",
-		"lint": "eslint . --fix --report-unused-disable-directives",
+		"lint": "eslint . --fix --report-unused-disable-directives && yarn format",
 		"format": "prettier --write .",
 		"generate-icons": "tsx ./scripts/generate-icons.ts",
 		"env:new": "dotenv-vault new",
-		"env:push": "npm run env:push:development && npm run env:push:production",
+		"env:push": "yarn env:push:development && yarn env:push:production",
 		"env:push:development": "dotenv-vault push development .env.development",
 		"env:push:production": "dotenv-vault push production .env.production",
-		"env:pull": "npm run env:pull:example && npm run env:pull:development && npm run env:pull:production",
+		"env:pull": "yarn env:pull:example && yarn env:pull:development && yarn env:pull:production",
 		"env:pull:example": "dotenv-vault pull example .env.example",
 		"env:pull:development": "dotenv-vault pull development .env.development",
 		"env:pull:production": "dotenv-vault pull production .env.production",
@@ -25,7 +25,7 @@
 	},
 	"dependencies": {
 		"@sentry/react-native": "5.5.0",
-		"expo": "^49.0.0",
+		"expo": "^49.0.3",
 		"expo-application": "^5.3.0",
 		"expo-av": "^13.4.1",
 		"expo-constants": "^14.4.2",
@@ -38,21 +38,21 @@
 		"expo-secure-store": "^12.3.1",
 		"expo-status-bar": "^1.6.0",
 		"expo-system-ui": "^2.4.0",
-		"expo-updates": "^0.18.8",
+		"expo-updates": "^0.18.10",
 		"react": "18.2.0",
-		"react-native": "^0.72.1",
+		"react-native": "^0.72.3",
 		"react-native-gesture-handler": "^2.12.0",
 		"react-native-paper": "^5.9.1",
 		"react-native-paper-dates": "^0.18.12",
 		"react-native-reanimated": "^3.3.0",
 		"react-native-safe-area-context": "4.6.3",
-		"react-native-screens": "^3.22.0",
-		"react-native-svg": "^13.9.0",
-		"sentry-expo": "^7.0.0",
+		"react-native-screens": "^3.22.1",
+		"react-native-svg": "13.9.0",
+		"sentry-expo": "^7.0.1",
 		"zod": "^3.21.4"
 	},
 	"devDependencies": {
-		"@babel/core": "^7.22.7",
+		"@babel/core": "^7.22.9",
 		"@expo/config": "^8.1.2",
 		"@svgr/core": "^8.0.0",
 		"@svgr/plugin-jsx": "^8.0.1",
@@ -61,26 +61,28 @@
 		"@testing-library/react-native": "^12.1.2",
 		"@total-typescript/ts-reset": "^0.4.2",
 		"@types/babel__core": "^7.20.1",
-		"@types/eslint": "^8.40.2",
-		"@types/jest": "^29.5.2",
+		"@types/eslint": "^8.44.0",
+		"@types/jest": "^29.5.3",
+		"@types/node": "^20.4.2",
 		"@types/prettier": "^2.7.3",
-		"@types/react": "~18.0.27",
+		"@types/react": "^18.2.15",
 		"@types/react-native": "^0.72.2",
-		"@typescript-eslint/eslint-plugin": "^5.61.0",
-		"@typescript-eslint/parser": "^5.61.0",
-		"dotenv-vault": "^1.24.0",
-		"eas-cli": "^3.15.0",
-		"eslint": "^8.44.0",
+		"@typescript-eslint/eslint-plugin": "^6.1.0",
+		"@typescript-eslint/parser": "^6.1.0",
+		"dotenv-vault": "^1.25.0",
+		"eas-cli": "^3.16.0",
+		"eslint": "^8.45.0",
 		"eslint-config-prettier": "^8.8.0",
-		"eslint-config-react-app": "^7.0.1",
 		"eslint-import-resolver-typescript": "^3.5.5",
 		"eslint-plugin-import": "^2.27.5",
+		"eslint-plugin-jsx-a11y": "^6.7.1",
 		"eslint-plugin-jsx-expressions": "^1.3.1",
 		"eslint-plugin-react": "^7.32.2",
+		"eslint-plugin-react-hooks": "^4.6.0",
 		"eslint-plugin-testing-library": "^5.11.0",
-		"eslint-plugin-unused-imports": "^2.0.0",
+		"eslint-plugin-unused-imports": "^3.0.0",
 		"eslint-plugin-vitest": "^0.2.6",
-		"jest": "^29.6.0",
+		"jest": "^29.6.1",
 		"jest-expo": "^49.0.0",
 		"prettier": "^3.0.0",
 		"ts-jest": "^29.1.1",
