--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"format": "prettier --write .",
 		"generate-icons": "tsx ./scripts/generate-icons.ts",
 		"env:new": "dotenv-vault new",
+		"env:login": "dotenv-vault login",
 		"env:push": "yarn env:push:development && yarn env:push:production",
 		"env:push:development": "dotenv-vault push development .env.development",
 		"env:push:production": "dotenv-vault push production .env.production",
@@ -25,66 +26,65 @@
 	},
 	"dependencies": {
 		"@sentry/react-native": "5.5.0",
-		"expo": "^49.0.3",
-		"expo-application": "^5.3.0",
-		"expo-av": "^13.4.1",
-		"expo-constants": "^14.4.2",
-		"expo-device": "^5.4.0",
+		"expo": "^49.0.6",
+		"expo-application": "^5.3.1",
+		"expo-av": "~13.4.1",
+		"expo-constants": "~14.4.2",
+		"expo-device": "~5.4.0",
 		"expo-font": "~11.4.0",
-		"expo-linear-gradient": "^12.3.0",
+		"expo-linear-gradient": "~12.3.0",
 		"expo-linking": "^5.0.2",
-		"expo-network": "^5.4.0",
-		"expo-router": "^2.0.0",
-		"expo-secure-store": "^12.3.1",
-		"expo-status-bar": "^1.6.0",
-		"expo-system-ui": "^2.4.0",
-		"expo-updates": "^0.18.10",
+		"expo-network": "~5.4.0",
+		"expo-router": "2.0.0",
+		"expo-secure-store": "~12.3.1",
+		"expo-status-bar": "~1.6.0",
+		"expo-system-ui": "~2.4.0",
+		"expo-updates": "^0.18.11",
 		"react": "18.2.0",
 		"react-native": "^0.72.3",
-		"react-native-gesture-handler": "^2.12.0",
-		"react-native-paper": "^5.9.1",
+		"react-native-gesture-handler": "^2.12.1",
+		"react-native-paper": "^5.10.0",
 		"react-native-paper-dates": "^0.18.12",
-		"react-native-reanimated": "^3.3.0",
+		"react-native-reanimated": "~3.3.0",
 		"react-native-safe-area-context": "4.6.3",
-		"react-native-screens": "^3.22.1",
+		"react-native-screens": "~3.22.0",
 		"react-native-svg": "13.9.0",
 		"sentry-expo": "^7.0.1",
 		"zod": "^3.21.4"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.22.9",
-		"@expo/config": "^8.1.2",
+		"@expo/config": "~8.1.1",
 		"@svgr/core": "^8.0.0",
 		"@svgr/plugin-jsx": "^8.0.1",
 		"@svgr/plugin-svgo": "^8.0.1",
 		"@testing-library/jest-native": "^5.4.2",
-		"@testing-library/react-native": "^12.1.2",
+		"@testing-library/react-native": "^12.1.3",
 		"@total-typescript/ts-reset": "^0.4.2",
 		"@types/babel__core": "^7.20.1",
-		"@types/eslint": "^8.44.0",
+		"@types/eslint": "^8.44.1",
 		"@types/jest": "^29.5.3",
-		"@types/node": "^20.4.2",
-		"@types/prettier": "^2.7.3",
-		"@types/react": "^18.2.15",
-		"@types/react-native": "^0.72.2",
-		"@typescript-eslint/eslint-plugin": "^6.1.0",
-		"@typescript-eslint/parser": "^6.1.0",
+		"@types/node": "^20.4.6",
+		"@types/prettier": "^3.0.0",
+		"@types/react": "^18.2.18",
+		"@typescript-eslint/eslint-plugin": "^6.2.1",
+		"@typescript-eslint/parser": "^6.2.1",
 		"dotenv-vault": "^1.25.0",
-		"eas-cli": "^3.16.0",
-		"eslint": "^8.45.0",
-		"eslint-config-prettier": "^8.8.0",
+		"eas-cli": "^3.18.2",
+		"eslint": "^8.46.0",
+		"eslint-config-prettier": "^8.10.0",
 		"eslint-import-resolver-typescript": "^3.5.5",
-		"eslint-plugin-import": "^2.27.5",
+		"eslint-plugin-import": "^2.28.0",
 		"eslint-plugin-jsx-a11y": "^6.7.1",
 		"eslint-plugin-jsx-expressions": "^1.3.1",
-		"eslint-plugin-react": "^7.32.2",
+		"eslint-plugin-react": "^7.33.1",
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"eslint-plugin-testing-library": "^5.11.0",
 		"eslint-plugin-unused-imports": "^3.0.0",
-		"eslint-plugin-vitest": "^0.2.6",
-		"jest": "^29.6.1",
+		"eslint-plugin-vitest": "^0.2.8",
+		"jest": "^29.6.2",
 		"jest-expo": "^49.0.0",
-		"prettier": "^3.0.0",
+		"prettier": "^3.0.1",
 		"ts-jest": "^29.1.1",
 		"tsx": "^3.12.7",
 		"typescript": "^5.1.6"
