--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"expo": "^49.0.6",
 		"expo-application": "^5.3.1",
 		"expo-av": "~13.4.1",
+		"expo-cli": "^6.3.10",
 		"expo-constants": "~14.4.2",
 		"expo-device": "~5.4.0",
 		"expo-font": "~11.4.0",
