--- a/package.json
+++ b/package.json
@@ -26,68 +26,67 @@
 	},
 	"dependencies": {
 		"@sentry/react-native": "5.5.0",
-		"expo": "^49.0.6",
-		"expo-application": "^5.3.1",
+		"expo": "^49.0.11",
+		"expo-application": "~5.3.0",
 		"expo-av": "~13.4.1",
-		"expo-cli": "^6.3.10",
 		"expo-constants": "~14.4.2",
 		"expo-device": "~5.4.0",
 		"expo-font": "~11.4.0",
 		"expo-linear-gradient": "~12.3.0",
-		"expo-linking": "^5.0.2",
+		"expo-linking": "~5.0.2",
 		"expo-network": "~5.4.0",
-		"expo-router": "2.0.0",
+		"expo-router": "2.0.6",
 		"expo-secure-store": "~12.3.1",
 		"expo-status-bar": "~1.6.0",
 		"expo-system-ui": "~2.4.0",
-		"expo-updates": "^0.18.11",
+		"expo-updates": "^0.18.13",
 		"react": "18.2.0",
-		"react-native": "^0.72.3",
+		"react-native": "^0.72.4",
 		"react-native-gesture-handler": "^2.12.1",
-		"react-native-paper": "^5.10.0",
-		"react-native-paper-dates": "^0.18.12",
+		"react-native-paper": "^5.10.4",
+		"react-native-paper-dates": "^0.19.0",
 		"react-native-reanimated": "~3.3.0",
 		"react-native-safe-area-context": "4.6.3",
 		"react-native-screens": "~3.22.0",
 		"react-native-svg": "13.9.0",
 		"sentry-expo": "^7.0.1",
-		"zod": "^3.21.4"
+		"zod": "^3.22.2"
 	},
 	"devDependencies": {
-		"@babel/core": "^7.22.9",
-		"@expo/config": "~8.1.1",
-		"@svgr/core": "^8.0.0",
-		"@svgr/plugin-jsx": "^8.0.1",
-		"@svgr/plugin-svgo": "^8.0.1",
-		"@testing-library/jest-native": "^5.4.2",
-		"@testing-library/react-native": "^12.1.3",
-		"@total-typescript/ts-reset": "^0.4.2",
-		"@types/babel__core": "^7.20.1",
-		"@types/eslint": "^8.44.1",
-		"@types/jest": "^29.5.3",
-		"@types/node": "^20.4.6",
+		"@babel/core": "^7.22.19",
+		"@expo/config": "~8.1.2",
+		"@svgr/core": "^8.1.0",
+		"@svgr/plugin-jsx": "^8.1.0",
+		"@svgr/plugin-svgo": "^8.1.0",
+		"@testing-library/jest-native": "^5.4.3",
+		"@testing-library/react-native": "^12.3.0",
+		"@total-typescript/ts-reset": "^0.5.1",
+		"@types/babel__core": "^7.20.2",
+		"@types/eslint": "^8.44.2",
+		"@types/jest": "^29.5.5",
+		"@types/node": "^20.6.2",
 		"@types/prettier": "^3.0.0",
-		"@types/react": "^18.2.18",
-		"@typescript-eslint/eslint-plugin": "^6.2.1",
-		"@typescript-eslint/parser": "^6.2.1",
+		"@types/react": "^18.2.21",
+		"@typescript-eslint/eslint-plugin": "^6.7.0",
+		"@typescript-eslint/parser": "^6.7.0",
 		"dotenv-vault": "^1.25.0",
-		"eslint": "^8.46.0",
-		"eslint-config-prettier": "^8.10.0",
-		"eslint-import-resolver-typescript": "^3.5.5",
-		"eslint-plugin-import": "^2.28.0",
+		"eslint": "^8.49.0",
+		"eslint-config-prettier": "^9.0.0",
+		"eslint-import-resolver-typescript": "^3.6.0",
+		"eslint-plugin-import": "^2.28.1",
 		"eslint-plugin-jsx-a11y": "^6.7.1",
 		"eslint-plugin-jsx-expressions": "^1.3.1",
-		"eslint-plugin-react": "^7.33.1",
+		"eslint-plugin-react": "^7.33.2",
 		"eslint-plugin-react-hooks": "^4.6.0",
-		"eslint-plugin-testing-library": "^5.11.0",
+		"eslint-plugin-testing-library": "^6.0.1",
 		"eslint-plugin-unused-imports": "^3.0.0",
-		"eslint-plugin-vitest": "^0.2.8",
-		"jest": "^29.6.2",
+		"eslint-plugin-vitest": "^0.3.1",
+		"jest": "^29.7.0",
 		"jest-expo": "^49.0.0",
-		"prettier": "^3.0.1",
+		"prettier": "^3.0.3",
 		"ts-jest": "^29.1.1",
-		"tsx": "^3.12.7",
-		"typescript": "^5.1.6"
+		"tsx": "^3.12.10",
+		"typescript": "^5.2.2"
 	},
 	"private": true
 }
