Add `cspell` dep

--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
 		"update-deps": "yarn upgrade-interactive && expo install --fix && yarn dlx expo-doctor",
 		"test": "jest --watch --coverage=false --changedSince=origin/main",
 		"test:all": "jest",
-		"lint": "eslint . --fix --report-unused-disable-directives && yarn format",
-		"format": "prettier --write .",
+		"lint": "eslint . --fix --report-unused-disable-directives && pnpm format && pnpm spellcheck",
+		"format": "prettier --write --log-level silent .",
+		"spellcheck": "cspell . --quiet",
 		"generate-icons": "tsx ./scripts/generate-icons.ts",
 		"env:new": "dotenv-vault new",
 		"env:login": "dotenv-vault login",
@@ -69,6 +70,7 @@
 		"@types/react": "^18.2.21",
 		"@typescript-eslint/eslint-plugin": "^6.7.0",
 		"@typescript-eslint/parser": "^6.7.0",
+		"cspell": "^7.3.6",
 		"dotenv-vault": "^1.25.0",
 		"eslint": "^8.49.0",
 		"eslint-config-prettier": "^9.0.0",
