--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"trace": "tsc --generateTrace ./trace && npx @typescript/analyze-trace trace"
 	},
 	"dependencies": {
+		"@react-native-async-storage/async-storage": "1.18.2",
 		"@sentry/react-native": "5.5.0",
 		"expo": "^49.0.11",
 		"expo-application": "~5.3.0",
