Update `package.json` and `README.md`

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 		"android": "expo start --android",
 		"ios": "expo start --ios",
 		"web": "expo start --web",
-		"update-deps": "yarn upgrade-interactive && expo install --fix && yarn dlx expo-doctor",
+		"update-deps": "pnpm upgrade -Li && expo install --fix && pnpm dlx expo-doctor",
 		"test": "jest --watch --coverage=false --changedSince=origin/main",
 		"test:all": "jest",
 		"lint": "eslint . --fix --report-unused-disable-directives && pnpm format && pnpm spellcheck",
@@ -22,10 +22,10 @@
 		"generate-icons": "node ./scripts/generate-icons.ts",
 		"env:new": "dotenv-vault new",
 		"env:login": "dotenv-vault login",
-		"env:push": "yarn env:push:development && yarn env:push:production",
+		"env:push": "pnpm env:push:development && pnpm env:push:production",
 		"env:push:development": "dotenv-vault push development .env.development",
 		"env:push:production": "dotenv-vault push production .env.production",
-		"env:pull": "yarn env:pull:example && yarn env:pull:development && yarn env:pull:production",
+		"env:pull": "pnpm env:pull:example && pnpm env:pull:development && pnpm env:pull:production",
 		"env:pull:example": "dotenv-vault pull example .env.example",
 		"env:pull:development": "dotenv-vault pull development .env.development",
 		"env:pull:production": "dotenv-vault pull production .env.production",
