Update eslint to always show `warning` instead of `error`

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
 		"update-deps": "pnpm upgrade -Li && expo install --fix && pnpm dlx expo-doctor",
 		"test": "jest --watch --coverage=false --changedSince=origin/main",
 		"test:all": "jest",
-		"lint": "eslint . --fix --report-unused-disable-directives && pnpm format && pnpm spellcheck",
+		"lint": "eslint . --max-warnings=0 --fix --report-unused-disable-directives && pnpm format && pnpm spellcheck",
 		"format": "prettier --write --log-level silent .",
 		"spellcheck": "cspell . --quiet",
 		"generate-icons": "node ./scripts/generate-icons.ts",
@@ -82,6 +82,7 @@
 		"eslint-plugin-import": "^2.29.1",
 		"eslint-plugin-jsx-a11y": "^6.8.0",
 		"eslint-plugin-jsx-expressions": "^1.3.2",
+		"eslint-plugin-only-warn": "^1.1.0",
 		"eslint-plugin-react": "^7.33.2",
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"eslint-plugin-testing-library": "^6.2.0",
