Update `module` and `moduleResolution` in `tsconfig`
Changed from `module: "NodeNext", moduleResolution: "NodeNext"` to `module: "Preserve", moduleResolution: "Bundler"`
`NodeNext` was used because it enforces the use of `js` extensions in imports and Vite seemed to not have a problem with it
The new option `preserve` enforces the extensions while being more accurate since TS is not bundling the code
More info at: https://www.totaltypescript.com/tsconfig-cheat-sheet

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,6 @@
 		"noFallthroughCasesInSwitch": true,
 		"noImplicitAny": true,
 		"noImplicitOverride": true,
-		"noImplicitReturns": true,
 		"noImplicitThis": true,
 		"noUncheckedIndexedAccess": true,
 		"strictFunctionTypes": true,
@@ -20,9 +19,8 @@
 		"noUnusedParameters": false,
 
 		// modules
-		"module": "ESNext",
+		"module": "Preserve",
 		"moduleResolution": "Bundler",
-		"allowImportingTsExtensions": true,
 		"resolveJsonModule": true,
 
 		// emit
@@ -50,9 +48,8 @@
 		"noErrorTruncation": true,
 
 		// completeness
-		"skipLibCheck": true
+		"skipLibCheck": true,
 	},
-	"exclude": ["node_modules", "cache", "coverage"],
 	"include": [
 		"**/*.ts",
 		"**/*.tsx",
@@ -61,6 +58,7 @@
 		"./.*.cjs",
 		".expo/types/**/*.ts",
 		"expo-env.d.ts",
-		"metro.config.js"
-	]
+		"metro.config.js",
+	],
+	"exclude": ["node_modules", "cache", "coverage"],
 }
